# flask-playlib

./: app.py  env_example  pyproject.toml
adapters/orms/: mapper.py  play.py  user.py
entities/: play.py  user.py
infrastructure/database/configs/: abstraction.py  connect.py  engine.py
routes/: auth.py  games.py  main.py
templates/: base.html  index.html
templates/auth/: login.html
templates/games/: list.html  new.html
